--- a/Tracker_Dashboard/templates/base.html
+++ b/Tracker_Dashboard/templates/base.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>My Application</h1>
+        <h1>
+            My Application
+        </h1>
     </header>
     <main>
         {% block content %}{% endblock %}
