--- a/Tracker_Dashboard/templates/registration.html
+++ b/Tracker_Dashboard/templates/registration.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="registercontainer">
     <h2>Welcome to ProjectHub</h2>
-    <form action="#" method="post">
+    <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
         <div class="registerform-row">
             <input type="text" name="fullname" placeholder="Full Name" required>
@@ -16,7 +16,6 @@
         </div>
         <div class="registerform-row">
             <input type="text" name="reg_number" placeholder="Registration Number" required>
-          
         </div>
         <input type="email" name="email" placeholder="Email" required>
         <input type="password" name="password" placeholder="Password" required>
