--- a/Tracker_Dashboard/templates/registration.html
+++ b/Tracker_Dashboard/templates/registration.html
@@ -15,7 +15,7 @@
             <input type="text" name="surname" placeholder="Surname" required>
         </div>
         <div class="registerform-row">
-            <input type="text" name="reg_number" placeholder="Registration Number" required>
+            <input type="text" name="reg_number" placeholder="Registration Number">
             <input type="hidden" id="id_role" name="role" value="student">
         </div>
         <input type="email" id="id_email" name="email" placeholder="Email" required>
